--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
-  --main-darklg: #1d2635;
+  /* --main-darklg: #1d2635;
   --main-dark: #161d29;
   --primary-color: #2f80ec;
   --main-light: #eeeeee;
+  font-family: "Poppins", sans-serif; */
+
+  --main-darklg: #000000;
+  --main-dark: #000000;
+  --primary-color: #000000;
+  --main-light: #ffffff;
   font-family: "Poppins", sans-serif;
 }
 
@@ -87,14 +93,16 @@ video {
 }
 
 .background__red {
-  background-color: #f6484a;
+  background-color: #ff1b1e;
 }
 
 .main__right {
   display: flex;
   flex-direction: column;
   flex: 0.3;
-  background-color: #242f41;
+  /* background-color: #242f41; */
+  background-color: #000000;
+  border-left: #ffffff 1px solid;
 }
 
 .main__chat_window {
@@ -142,7 +150,7 @@ video {
 
 .message > b > i {
   margin-right: 0.7rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .message > span {
